[gd_scene load_steps=3 format=3 uid="uid://bbx2u46bd2lh5"]

[ext_resource type="Texture2D" uid="uid://bj084ohgm2ofn" path="res://assets/BulletHell/Sprites/Backgrounds/uiBox.png" id="1"]
[ext_resource type="Script" path="res://assets/BulletHell/ScriptsScenes/Systems/UI.gd" id="2"]

[node name="UserInterface" type="Node2D"]
script = ExtResource("2")

[node name="UIBox" type="Sprite2D" parent="."]
position = Vector2(110, 40)
scale = Vector2(1.73438, 0.65625)
texture = ExtResource("1")

[node name="UIText" type="Node2D" parent="."]

[node name="CardsTimer" type="RichTextLabel" parent="UIText"]
offset_right = 221.0
offset_bottom = 40.0
text = "Time until cards: "

[node name="Score" type="RichTextLabel" parent="UIText"]
offset_left = 2.0
offset_top = 16.0
offset_right = 96.0
offset_bottom = 56.0
text = "Score: "

[node name="GameLevel" type="RichTextLabel" parent="UIText"]
offset_left = -1.0
offset_top = 33.0
offset_right = 229.0
offset_bottom = 56.0
text = "Game Level: "

[node name="Lives" type="RichTextLabel" parent="UIText"]
offset_left = 114.0
offset_top = 17.0
offset_right = 217.0
offset_bottom = 57.0
text = "Lives: "

[node name="PlayerLevel" type="RichTextLabel" parent="UIText"]
offset_left = 114.0
offset_top = 32.0
offset_right = 229.0
offset_bottom = 72.0
text = "Player Level: "

[node name="LevelTime" type="RichTextLabel" parent="UIText"]
offset_left = 2.0
offset_top = 49.0
offset_right = 195.0
offset_bottom = 89.0
text = "Level Time: "
